--- a/index.html
+++ b/index.html
@@ -377,12 +377,12 @@ scrolling="no" marginheight="0" marginwidth="0"
        </div>
     </div>
 </div>
-    
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/email_handler.js"></script>
 <script src="js/myjs.js"></script>
-    
+<script src="js/myjs2.js"></script>
 </body>
 
 </html>
