--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 
-<body id="body">
+<body id="body" data-spy="scroll" data-target=".navbar" data-offset="50" >
    
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	  <div class="container">
@@ -34,8 +34,9 @@
 		   <div id="navbar" class="navbar-collapse collapse" style="font-size:20px">
 		     <ul class="nav navbar-nav navbar-right">
 			    <li><a id="showskills" style="color:white;font-family:Georgia;" href="#skills">Skills</a></li>
+			     <li><a id="showcreations" style="color:white;font-family:Georgia;" href="#creations">Creations</a></li>
 		        <li><a id="showcontact" style="color:white;font-family:Georgia;" href="#contact">Contact</a></li>
-                <li><a id="showcreations" style="color:white;font-family:Georgia;" href="#creations">Creations</a></li>
+                
 		     </ul>
 		   </div>
 		    
