--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@ scrolling="no" marginheight="0" marginwidth="0"
 <script src="js/bootstrap.min.js"></script>
 <script src="js/email_handler.js"></script>
 <script src="js/myjs.js"></script>
+<script src="js/myjs2.js"></script>
     
 </body>
 
