--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@ scrolling="no" marginheight="0" marginwidth="0"
 <script src="js/bootstrap.min.js"></script>
 <script src="js/email_handler.js"></script>
 <script src="js/myjs.js"></script>
+	<script src="js/myjs2.js"></script>
     
 </body>
 
