--- a/index.html
+++ b/index.html
@@ -44,9 +44,20 @@
 	  </div>
 	</nav>
         <div style="background-image:url('img/intro.jpg');" class="cover" id="img_container">
+		<p style="padding:20px;"></p>
+		    <div align=right>
+			  <div class="btn-group" style="padding: 0px 0px;">
+		  <span id="btn_grp">
+                        <a href="http://www.facebook.com/yugal.sharma.754"><i  style="padding:15px;color:white;font-size:25px;" class="fa fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/yugal-sharma-62855713a/"><i style="padding:15px;color:white;font-size:25px;" class="fa fa-linkedin"></i></a>
+                        <a href="http://github.com/yugrocks"><i style="padding:15px;color:white;font-size:25px;" class="fa fa-github"></i></a>
+                        <a href="mailto:yugalsharma13@gmail"><i style="padding:15px;color:white;font-size:25px;" class="fa fa-envelope-o"></i></a>
+              </span>
+                    </div>
+		    </div>
             <div class="container">
 			    <div class="row row-content">
-				    <p style="padding:100px"></p>
+				    <p style="padding:50px;"></p>
 				    <h1 align=center class="col-xs-12" id="name" >YUGAL SHARMA</h1>
 				</div>
                 <div class="row row-content">
