--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		 
 	  </div>
 	</nav>
-        <div style="background-image:url('img/intro.jpg');" class="cover" id="img_container">
+        <div style="background-image:url('img/intro.jpg');background-size:contain;" class="cover" id="img_container">
 		<p style="padding:20px;"></p>
 		    <div align=right>
 			  <div class="btn-group" style="padding: 0px 0px;">
