--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
         <div class="row row-content jumbotron">
           <div class="col-sm-3 col-xs-12 col-sm-offset-1">
-            <img class="img-thumbnail myimg img-responsive" height=180px width=180px src="img/yugal.jpg">
+            <img class="img-thumbnail myimg img-responsive" height=180px width=180px src="img/yugal1.jpg">
             </div>
            <div class="col-sm-8 col-xs-12">
             <h2><strong>INTRO</strong></h2>
