--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
         <div class="row row-content jumbotron">
           <div class="col-sm-3 col-xs-12 col-sm-offset-1">
-            <img class="myimg img-responsive" height=180px width=180px src="img/yugal.jpg">
+            <img class="myimg img-responsive" height=180px width=180px src="img/yugal1.png">
             </div>
            <div class="col-sm-8 col-xs-12">
             <h2><strong>INTRO</strong></h2>
@@ -180,7 +180,7 @@
         </div>
         <div class="col-xs-12 col-sm-4">
 		<i style="color:orange; font-size:70px;"  class="fa fa-laptop" aria-hidden="true"></i>
-        <h2>Miscallenous</h2>
+        <h2>Miscellaneuos</h2>
             <p>
             Android Dev, Web dev,<br> Software dev,<br>Machine Learning<br>NLP, Logic Programming
             
