--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 		 <p style="padding:30px"></p>
 		
     <div  id="about" class="container-fluid">
-        <div id="intro" class="row row-content jumbotron disappear">
+        <div style="background:#5FA1FF" id="intro" class="row row-content jumbotron disappear">
           <div class="col-sm-3 col-xs-12 col-sm-offset-1">
             <img class="myimg img-responsive" height=180px width=180px src="img/yugal1.png">
             </div>
            <div class="col-sm-8 col-xs-12">
-            <h2><strong>INTRO</strong></h2>
-            <p style="font-size:19px;"><strong>Hey there, I am Yugal Sharma and I am a CSE undergraduate at MSIT (GGSIPU),New Delhi. I am going to graduate in 2019. <br>I am a web developer, but I also have great interest in Android development.<br>I am an Artificial Intelligence enthusiast, and I'm currently working on machine learning, NLP and logic programming. I want to learn as much as I can. <br>Plus, I've got a vision, and the best part is that it's not fictional anymore! I want to give something to this world, and contribute as little or as big as I can.
+            <h2 style="color:white"><strong>INTRO</strong></h2>
+            <p style="font-size:19px;color:white"><strong>Hey there, I am Yugal Sharma and I am a CSE undergraduate at MSIT (GGSIPU),New Delhi. I am going to graduate in 2019. <br>I am a web developer, but I also have great interest in Android development.<br>I am an Artificial Intelligence enthusiast, and I'm currently working on machine learning, NLP and logic programming. I want to learn as much as I can. <br>Plus, I've got a vision, and the best part is that it's not fictional anymore! I want to give something to this world, and contribute as little or as big as I can.
 </strong></p>
             </div>
         
