--- a/index.html
+++ b/index.html
@@ -244,6 +244,21 @@
        </div>
     </div>
                 
+    <div class="item">
+       <div class="row row-content">
+           <div class="col-xs-12 col-sm-6">
+               <img src="img/t-rex.png">
+           </div>
+           <div class="col-xs-12 col-sm-6">
+              <h2 style="color:green;font-family:Georgia;">Smart T-Rex </h2>
+			  <h3 style="color:yellow;font-family:Georgia;">Just For Fun. </h3>
+                            <p style="color:white;font-size:17px;">
+               Our cute T-Rex from the Google chrome's T-Rex (skipper) game has just got intelligent. I taught him to play it by himself using some Deep Learning ;) </p>
+                <br>
+           <p style="margin:0px;padding:0px;font-size:15px;color:white;"><a style="color:orange;" href="https://www.youtube.com/watch?v=cCRWcsEj1aU">Demo here</a></p><br>
+           </div>
+       </div>
+    </div>
                 
     <div class="item">
         <div class="row row-content">
