--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div  id="about" class="container-fluid">
         <div style="background:#5FA1FF" id="intro" class="row row-content jumbotron disappear">
           <div class="col-sm-3 col-xs-12 col-sm-offset-1">
-            <img class="myimg img-responsive" height=180px width=180px src="img/yugal1.png">
+            <img class="myimg img-responsive" height=180px width=180px src="img/Yugal2[1].png">
             </div>
            <div class="col-sm-8 col-xs-12">
             <h2 style="color:white"><strong>INTRO</strong></h2>
