Update and rename main_page.html to index.html

--- a/index.html
+++ b/index.html
@@ -420,6 +420,17 @@ scrolling="no" marginheight="0" marginwidth="0"
 <script src="js/myjs.js"></script>
 <script src="js/myjs2.js"></script>
 <script src="js/myjs3.js"></script>
+	
+<script>
+
+  (function (w,d,s,o,f,js,fjs){
+    w['zinisdk']=o;w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };
+    js = d.createElement(s), fjs = d.getElementsByTagName(s)[0];
+    js.id = o; js.src = f; js.async = 1; js.id = 'zinisdk-script'; fjs.parentNode.insertBefore(js, fjs);
+  }(window, document, 'script', 'zini', 'http://zini.ai/sdk/embed/v1.0/embed.js'));
+  zini('init', "158030773317589");
+	
+</script>
 
 </body>
 
